2002-12-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (SelectableLabel): New fancy experiment to
	make labels both selectable _and_ focusable, so that they end up
	in the Tab chain.

	* src/aboutdialog.cc src/imagebutton.cc src/prefdialog.cc: Don't
	show all children of custom "composite" widgets in the constructor.
	It doesn't make much sense since we call show_all() later on anyway.
	And making these "composite" widgets really independent components
	would require overriding both show_all_vfunc() and hide_all_vfunc(),
	which is currently not worth the effort.

2002-12-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/regexxer.png: Replace with a much nicer icon stolen from
	http://jimmac.musichall.cz/ikony.php3 -- looks sweet!

2002-12-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (PCRE_CHECK_VERSION): Require libpcre >= 3.9.  It
	finally arrived in Debian unstable a while ago and there's at least
	one UTF-8 related bug in prior releases that could cause crashes.

2002-12-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (translate_to_char_offset): New function
	that translates the error offset returned by pcre_compile() to
	a character offset into the original regex.  This became necessary
	since due to the recent introduction of escape_non_ascii(), and
	is more robust anyway.

	* src/mainwindow.cc (on_exec_search): Deal with character offsets
	instead of byte offsets.  Also, set the regex entry's selection on
	the character where the error occurred.

2002-12-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.{cc,h}: Use Gtk::RC::parse_string() and the
	appropriate RC style settings to reduce the height of the Stop
	button, instead of the insane set_size_request() hack.  This way
	the label text gets properly aligned now.

2002-12-27  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (scale_to_8bit): Don't try to round to the